syntax = "proto3";

package rastreio;

service EstimativaEntrega {
  rpc CalcularEstimativa (EstimativaRequest) returns (EstimativaResponse);
}

message EstimativaRequest {
  repeated string veiculosids = 1;
  double latitude = 2;
  double longitude = 3;
}

message EstimativaResponse {
  repeated EstimativaVeiculo estimativas = 1;
}

message EstimativaVeiculo {
  string veiculoid = 1;
  double latitude = 2;
  double longitude = 3;
  double velocidade = 4;
  string status = 5;
  int64 timestamp = 6;
  string tempoEstimado = 7;
}